git faculty salsry layout left

--- a/app/src/main/res/layout/activity_fac_salary.xml
+++ b/app/src/main/res/layout/activity_fac_salary.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:id="@+id/FaSal"
     tools:context="in.classguru.classguru.FacSalaryActivity">
-
+<include layout="@layout/fac_sal_layout" />
     <android.support.design.widget.NavigationView
 
         android:id="@+id/navSideBar"
