--- a/app/src/main/res/layout/portion_layout.xml
+++ b/app/src/main/res/layout/portion_layout.xml
@@ -5,33 +5,41 @@
     android:padding="10dp"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv_Portionsubject"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Subject"
-        android:textSize="15sp"
-        android:textStyle="bold" />
-        <LinearLayout
+    <LinearLayout
+
             android:layout_marginTop="10dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/tv_topic"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Topic Name" />
+        <TextView
+            android:id="@+id/tv_Portionsubject"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Subject"
+            android:textAlignment="center"
+            android:textSize="15sp"
+            android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/tv_complete"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Status" />
+        <TextView
+            android:id="@+id/tv_topic"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Topic Name"
+            android:textAlignment="center" />
+
+        <TextView
+            android:id="@+id/tv_complete"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Completed"
+            android:textAlignment="center" />
+
         </LinearLayout>
+
 
     <ListView
         android:id="@+id/lv_portion"
