--- a/app/src/main/res/layout/fac_announc_layout.xml
+++ b/app/src/main/res/layout/fac_announc_layout.xml
@@ -56,7 +56,7 @@
             android:inputType="textPersonName" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/btn_FacAddAnnounc"
             android:layout_width="60dp"
             android:layout_height="50dp"
             android:layout_alignBaseline="@+id/et_notDesc"
