--- a/app/src/main/res/layout/fac_portionview_layout.xml
+++ b/app/src/main/res/layout/fac_portionview_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/Ll_facPortionView"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -19,9 +20,10 @@
         android:text="TextView"
         android:textSize="18sp" />
 
-    <Button
+    <!--<Button
+        android:id="@+id/btn_updatePortion"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:layout_weight="1"
-        android:text="Update" />
+        android:text="Update" />-->
 </LinearLayout>
