--- a/app/src/main/res/layout/fac_portion_update_layout.xml
+++ b/app/src/main/res/layout/fac_portion_update_layout.xml
@@ -4,16 +4,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ScrollView
+    <TableLayout
+        android:id="@+id/Ll_portionUpdateView"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
-            android:id="@+id/Ll_portionUpdateView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
 
-        </LinearLayout>
-    </ScrollView>
+    </TableLayout>
+
+
 </LinearLayout>
